--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,19 @@
-/*Your styles can go here.*/
+body {
+    font-family: sans-serif;
+}
+
+h4 {
+    border: 1px solid black;
+}
+
+.last-name {
+    font-weight: bold;
+}
+
+.form-field {
+    background-color: #ffff99
+}
+
+.form-button {
+    background-color: #ffff99;
+}
