--- a/templates/application-response.html
+++ b/templates/application-response.html
@@ -1,10 +1,17 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Application Response</title>
-</head>
-<body>
-    <!-- fill this in -->
-</body>
-</html>
+{% extends 'base.html' %}
+
+{ % block title % }Application Confirmed!
+{ % endblock % }
+
+{% block body %}
+    <div>
+    Thank you for your application, 
+    {{ first_name }} {{ last_name }}!
+    To confirm, you're applying to be a
+    {{ position }}
+    with a minimum salary requirement of
+    ${{ salary_requirement }}.
+    We'll be in touch soon if we think you
+    might be a great fit for our team. 
+    </div>
+{% endblock %}
